- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    4.8.4, 5.0.1
 - 
    Ubuntu 12.04 64-bit, Windows 7
 
- 
        qt4: e36e83b5e65a703058ec5a4e4418fe6a49d73e2c qt5/qtbase/stable: 00b11ccdead05d77589d4ec5ebb3b376c6ae2ca1
 
The example attached can be used to reproduce this issue.
Steps to reproduce:
1) Build and run the app.
2) Scroll to the bottom of the table.
3) Click any header item to sort the table.
Expected outcome:
All items remain aligned correctly and the table rect remains the same.
Actual outcome:
The cell widget (QLineEdit) is misaligned between two lines and all the table items jump upwards.
It looks like to be some update issue. If you scroll to the bottom of the table, you see that there is no extra space on the bottom after the last line in the table. However, once you sort, the whole table moves upwards and there comes an extra space below the last line.
| For Gerrit Dashboard: QTBUG-30653 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 53959,5 | Fix QTableView::doItemsLayout() | stable | qt/qtbase | Status: MERGED | +2 | 0 | 
| 53964,2 | Fix QTableView::doItemsLayout() | 4.8 | qt/qt | Status: MERGED | +2 | 0 |